--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -85,57 +85,10 @@ h6 {
   font-weight: inherit;
 }
 
-.wrapper {
-  min-height: 100vh;
-  display: flex;
-  overflow: hidden;
-  flex-direction: column;
-}
-.wrapper .header {
-  display: grid;
-  grid-template: 1fr/1fr minmax(100px, auto) minmax(1000px, auto) 1fr;
-  height: 70px;
-  background-color: #03545c;
-}
-.wrapper .header .heder__menu {
-  justify-content: flex-end;
-  display: flex;
-  align-items: center;
-}
-.wrapper .header .heder__menu .menu__items {
-  display: flex;
-  justify-content: space-around;
-}
-.wrapper .header .heder__menu .menu__items .menu_item {
-  padding: 5px;
-  margin: 0 40px 0 0;
-}
-.wrapper .header .heder__menu .menu__items .menu_item .menu_item_sillca {
-  font-family: monospace;
-  font-size: 20px;
-  color: white;
-}
-.wrapper .logotip {
-  margin: 5px;
-  grid-column: 2/3;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background-color: white;
-  border: 2px solid black;
-  align-items: center;
-}
-.wrapper .logotip .logotip_top {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  margin: 10px;
-  background-color: black;
-}
 
 .main {
   display: grid;
-  background-color: white;
+  background-color: rgb(245, 245, 245);
   flex: 1 1 auto;
   grid-template: 1fr/1fr minmax(300px, auto) minmax(1000px, auto) 1fr;
 }
@@ -165,14 +118,3 @@ h6 {
   background-color: white;
 }
 
-.footer {
-  display: flex;
-  height: 50px;
-  background-color: #03545c;
-  justify-content: center;
-  align-items: center;
-}
-.footer .Footer__content {
-  font-family: monospace;
-  color: white;
-}
